updating grid file

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,87 +1,101 @@
+/* the grid */
 
-/* BEGIN - general container and column container */
-
- 
+/* general container */
 
 .container {
     margin: 0 auto;
-    max-width: 1012px;     /* main width */
+    padding: 0 1%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     clear:none;
+
+    max-width: 1012px;     /* main width */
 }
 
 .container::after {
     content: " ";
     display:block;
     clear:both;
-}
+  }
 
+.container.full { max-width: 100%;}
+.container.fixed { max-width: 960px;}
+
+
+/* column container */
 
 .cc {
   width: 100%;
-  padding: 0.5% 3%;
-  display:inline-block;
-  box-sizing: border-box;
+  float:left;
+}
+
+
+/* columns */
+
+
+[class^="c-"] {
+  float:left;
+  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  min-height: 1px;
 }
 
+/* base grids */
+
+.c-1-1 {width: 100%}
+
+.c-5-1 {width: 20%}
+.c-5-2 {width: 40%}
+.c-5-3 {width: 60%}
+.c-5-4 {width: 80%}
+
+.c-7-1 {width: 14.2%}
+.c-7-2 {width: 28.4%}
+.c-7-3 {width: 42.6%}
+.c-7-4 {width: 56.8%}
+.c-7-5 {width: 71%}
+.c-7-6 {width: 85.2%}
+
+.c-12-1 {width: 8.3%}
+.c-12-2 {width: 16.6%} 
+.c-12-3 {width: 24.9%}
+.c-12-4 {width: 33.2%}
+.c-12-5 {width: 41.5%}
+.c-12-6 {width: 50%}
+.c-12-7 {width: 58.1%}
+.c-12-8 {width: 66.4%}
+.c-12-9 {width: 74.7%}
+.c-12-10 {width: 83%} 
+.c-12-11 {width: 91.3%}
 
 
-/* END - general column container */
-    
+/* 12-1 substite grids for greater accurancy */
 
-/* BEGIN - columns */
+.c-2-1 {width: 50%}
+
+.c-3-1 {width: 33.3%}
+.c-3-2 {width: 66.6%}
+
+.c-4-1 {width: 25%}
+.c-4-2 {width: 50%} /* redundant (c-2-1) but kept for sake of userfriendlyness */
+.c-4-3 {width: 75%}
+
+.c-6-1 {width: 16.6%}
+.c-6-2 {width: 33.2%}
+.c-6-3 {width: 50%} /* redundant (c-2-1) but kept for sake of userfriendlyness */
+.c-6-4 {width: 66.4%}
+.c-6-5 {width: 83%}
 
 
-.c-1-1,
-.c-3-1,
-.c-3-2,
-.c-2-1,
-.c-4-1,
-.c-4-3
-{
-  display: inline;
-  float: left;
-}
-
-.c-1-1 {
+/* column nesting limit -> 4 levels allowed - may be removed or tweaked if needed */
+[class^="c-"] > [class^="c-"] > [class^="c-"] > [class^="c-"] > [class^="c-"] {
     width: 100%;
 }
 
-.c-2-1 {
-    width: 50%;
-}
 
-.c-3-1 {
-    width: 34%;
-}
-
-.c-3-1 + .c-3-1 {
-    width: 33%;
-}
-
-.c-3-2 {
-    width: 66%;
-}
-
-.c-3-1 + .c-3-2 {
-   width: 67%;
-}
-
-.c-3-2 + .c-3-1 {
-   width: 34%;
-}
-
-.c-4-1 {
-    width: 25%;
-}
-
-.c-4-3 {
-    width: 75%;
-}
-/* END - columns */
-
-
-/* BEGIN - responsive part */
+/* responsive behaviour */
 
 @media only screen and (max-width: 1012px) {
     
@@ -99,26 +113,15 @@
     .container {
         min-width: 240px;
         width: auto;
-        padding: 0 5% 5%;
     }
     
-
-    .c-1-1,
-    .c-3-1,
-    .c-3-1 + .c-3-1,
-    .c-3-1 + .c-3-2, 
-    .c-3-2,
-    .c-3-2 + .c-3-1, 
-    .c-2-1,
-    .c-4-1,
-    .c-4-3
+    /* all columns go 100% frenzy on small screen */
+    [class^="c-"]
     {
       width: 100%;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
       box-sizing: border-box;
     }
     
 }
-
-/* END - responsive part */
-
-                
