--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,8 @@ p {
     -moz-transition: opacity 0.3s;
     -webkit-transition: opacity 0.3s;
     -ms-transition: opacity 0.3s;
-    transition: opacity 0.3s; }
+    transition: opacity 0.3s;
+    float: left; }
     .c-3-1 input[type=button]:hover {
       opacity: 1; }
 
