--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,9 @@
+/* === imports =============================================== */
+
+@import "grid"; 
+@import "normalize"; 
+
+
 /* === variables =============================================== */
 
 $st-blue-purple: #9698f3;
