new lorem ipsum goodness

--- a/css/style.scss
+++ b/css/style.scss
@@ -110,6 +110,10 @@ body {
     clear: both;
 }
 
+.fright {
+    float:right;
+}
+
 a, a:hover, a:focus, a:visited {
     color: $st-blue-purple;
 }
@@ -218,7 +222,7 @@ textarea {
     height: 300px;
     border: 0px;
     border-radius: 10px;
-    padding: 0.5% 1%;
+    padding: 10px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     color: #fff;
@@ -232,17 +236,17 @@ p {margin: 0.5em 0; color: $st-dorange-txt}
 
     font-variant: small-caps;
     font-size: 20px;
-    padding-left: 0px;
+    padding-right: 0px;
 
     .options-top, .options-bottom {
-        border-top-right-radius: 25% 100%;
+        border-radius: 25px 0 0 0;
         min-height: 50px;
         margin-bottom: 5px;
         @include rad-grad-lblue;
     }
 
     .options-bottom {
-        border-bottom-right-radius: 25% 100%;
+        border-bottom-left-radius: 25% 100%;
         min-height: 50px;
         margin-bottom: 5px;
     }
@@ -254,7 +258,7 @@ p {margin: 0.5em 0; color: $st-dorange-txt}
         padding-bottom: 1%;
         font-size: 0.8em;
         min-height: 25px;
-        @include fade;
+
         
         &.options {
             padding: 0 0 0 5px;
@@ -262,7 +266,7 @@ p {margin: 0.5em 0; color: $st-dorange-txt}
             margin-bottom: 5px;
             @include rad-grad-lblue;
             font-size: 1em;
-            opacity: 1;
+            min-height: 28px;
         }
     
         input[type=checkbox] {
@@ -273,6 +277,17 @@ p {margin: 0.5em 0; color: $st-dorange-txt}
         input, select {
             float:right
         }
+
+        &.radiobuttons {
+            min-height: 32px;
+        }
+
+        .radiobutton {
+            float:left;
+            background: transparent;
+            margin: 6px 4px 0 0;
+        }
+
     }
 
         
@@ -282,7 +297,7 @@ p {margin: 0.5em 0; color: $st-dorange-txt}
         padding: 10px 25px 0 0;
         border: 0px;
         width: 100%;
-        border-radius: 0 0 25px 0;
+        border-radius: 0 0 0 25px;
         @include fade;
         float:left;
     }
@@ -290,26 +305,30 @@ p {margin: 0.5em 0; color: $st-dorange-txt}
 
 
 .c-3-2 {
-    padding-right: 0;
+    padding-left: 0;
 
     .content-top {
         @include rad-grad-lblue-alt;
         height: 20px;
         margin-bottom: 5px;
-        margin-left: 20px;
+        margin-right: 25px;
           
-        &:before {
+        &:after {
+            float:right;
             content: " ";
             display:block;
             height: 20px;
             width: 20px;
             @include rad-grad-lblue-alt;
             border-right: 5px solid #000;
-            border-radius: 10px 0 0 10px;
-            margin-left: -20px
+            border-radius: 0 50% 50% 0;
+            margin-right: -30px;
         }
     }
 }
+
+
+
 
 /* === responsive stuff === */
 
@@ -336,16 +355,12 @@ p {margin: 0.5em 0; color: $st-dorange-txt}
     .content-top, .options-top {
         display:none;
     }
-    
-    .stlipsum {
-        .c-3-2 {
-            padding-top: 230px;
-        }
-        
-        .c-3-1 {
-            margin-top: -530px;
-        }
+
+    .c-3-1 input[type=button] {
+        border-radius: 0px;
     }
+    
+
 }
 
 @media only screen and (max-width: 550px) {
