--- a/css/style.css
+++ b/css/style.css
@@ -535,6 +535,9 @@ body {
   height: 0;
   clear: both; }
 
+.fright {
+  float: right; }
+
 a, a:hover, a:focus, a:visited {
   color: #9698f3; }
 
@@ -648,7 +651,7 @@ textarea {
   height: 300px;
   border: 0px;
   border-radius: 10px;
-  padding: 0.5% 1%;
+  padding: 10px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   color: #fff;
@@ -662,9 +665,9 @@ p {
 .c-3-1 {
   font-variant: small-caps;
   font-size: 20px;
-  padding-left: 0px; }
+  padding-right: 0px; }
   .c-3-1 .options-top, .c-3-1 .options-bottom {
-    border-top-right-radius: 25% 100%;
+    border-radius: 25px 0 0 0;
     min-height: 50px;
     margin-bottom: 5px;
     background: #507CFF;
@@ -684,7 +687,7 @@ p {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9EC5FF', endColorstr='#507CFF',GradientType=1 );
     /* IE6-9 fallback on horizontal gradient */ }
   .c-3-1 .options-bottom {
-    border-bottom-right-radius: 25% 100%;
+    border-bottom-left-radius: 25% 100%;
     min-height: 50px;
     margin-bottom: 5px; }
   .c-3-1 .c-1-1 {
@@ -708,15 +711,7 @@ p {
     padding-top: 1%;
     padding-bottom: 1%;
     font-size: 0.8em;
-    min-height: 25px;
-    opacity: 0.8;
-    -o-transition: opacity 0.3s;
-    -moz-transition: opacity 0.3s;
-    -webkit-transition: opacity 0.3s;
-    -ms-transition: opacity 0.3s;
-    transition: opacity 0.3s; }
-    .c-3-1 .c-1-1:hover {
-      opacity: 1; }
+    min-height: 25px; }
     .c-3-1 .c-1-1.options {
       padding: 0 0 0 5px;
       display: block;
@@ -738,12 +733,18 @@ p {
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9EC5FF', endColorstr='#507CFF',GradientType=1 );
       /* IE6-9 fallback on horizontal gradient */
       font-size: 1em;
-      opacity: 1; }
+      min-height: 28px; }
     .c-3-1 .c-1-1 input[type=checkbox] {
       border: 1px solid #ccc;
       margin-top: 3px; }
     .c-3-1 .c-1-1 input, .c-3-1 .c-1-1 select {
       float: right; }
+    .c-3-1 .c-1-1.radiobuttons {
+      min-height: 32px; }
+    .c-3-1 .c-1-1 .radiobutton {
+      float: left;
+      background: transparent;
+      margin: 6px 4px 0 0; }
   .c-3-1 input[type=button] {
     background: #fce667;
     /* Old browsers */
@@ -765,7 +766,7 @@ p {
     padding: 10px 25px 0 0;
     border: 0px;
     width: 100%;
-    border-radius: 0 0 25px 0;
+    border-radius: 0 0 0 25px;
     opacity: 0.8;
     -o-transition: opacity 0.3s;
     -moz-transition: opacity 0.3s;
@@ -777,7 +778,7 @@ p {
       opacity: 1; }
 
 .c-3-2 {
-  padding-right: 0; }
+  padding-left: 0; }
   .c-3-2 .content-top {
     background: #517DFF;
     /* Old browsers */
@@ -797,8 +798,9 @@ p {
     /* IE6-9 */
     height: 20px;
     margin-bottom: 5px;
-    margin-left: 20px; }
-    .c-3-2 .content-top:before {
+    margin-right: 25px; }
+    .c-3-2 .content-top:after {
+      float: right;
       content: " ";
       display: block;
       height: 20px;
@@ -820,8 +822,8 @@ p {
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#517DFF', endColorstr='#6690FF',GradientType=0 );
       /* IE6-9 */
       border-right: 5px solid #000;
-      border-radius: 10px 0 0 10px;
-      margin-left: -20px; }
+      border-radius: 0 50% 50% 0;
+      margin-right: -30px; }
 
 /* === responsive stuff === */
 @media only screen and (max-width: 880px) {
@@ -837,10 +839,8 @@ p {
   .content-top, .options-top {
     display: none; }
 
-  .stlipsum .c-3-2 {
-    padding-top: 230px; }
-  .stlipsum .c-3-1 {
-    margin-top: -530px; } }
+  .c-3-1 input[type=button] {
+    border-radius: 0px; } }
 @media only screen and (max-width: 550px) {
   header h1, header h2, footer h1, footer h2 {
     font-size: 14px;
