Changing paragraphs into list items. Close #5

--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -78,8 +78,9 @@
 
                             <div>
 
+
                               <div class="c-1-1">
-                                  <label for="noit">number of paragraphs</label>
+                                  <label for="noit" id="lorem-style">number of paragraphs</label>
                                   <select id="noit">
                                       <option>1</option>
                                       <option>2</option>
