--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -134,32 +134,17 @@
                         
                        <h2><span>set phasers to share</span></h2>
                        
-                       <!-- build:remove:dev -->
-                           <div class="twrapper">
-                          <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" class="twitter-share-button" data-lang="en">Tweet</a>
-
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
-                       </div>
-
+                       <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" rel="nofollow" target="_blank">Share on Twitter</a><br />
+                                             
+                                             <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">Share on Facebook</a><br />
+                                             
+                                             
+                                             <a href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank">Share on Google+</a><br />
+                                              
+                                              
+                                              <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank">Share on LinkedIn</a>
                        
-                      
-                       
-                       
-                       
-                      <div class="fb-like" data-href="http://star-trek-ipsum.meetpollux.com/" data-send="false" data-layout="box_count" data-width="80" data-show-faces="true"></div>     
-                 
-<g:plusone href="http://star-trek-ipsum.meetpollux.com/"></g:plusone>
 
-
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
- </script>
-
- <!-- /build -->
                         
                         <h2><span>about</span></h2>
                         <p>
