cleanup and case fix

--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -17,21 +17,6 @@
     </head>
     <body>
 
-
-        <!-- build:remove:dev -->
-        <div id="fb-root"></div>
-        <script>
-          (function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-            fjs.parentNode.insertBefore(js, fjs);
-          }(document, 'script', 'facebook-jssdk'));
-        </script>
-        <!-- /build -->
-
-
         <div class="container">
             <header>
                 <div class="cc">
@@ -134,15 +119,15 @@
                         
                        <h2><span>set phasers to share</span></h2>
                        
-                       <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" rel="nofollow" target="_blank">Share on Twitter</a><br />
+                       <a href="https://twitter.com/share?text=Star Trek Ipsum placeholder text&url=http://star-trek-ipsum.meetpollux.com/&via=vladsaling" title="Share on Twitter" rel="nofollow" target="_blank">share on twitter</a><br />
                                              
-                                             <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">Share on Facebook</a><br />
+                                             <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=http://star-trek-ipsum.meetpollux.com/">share on facebook</a><br />
                                              
                                              
-                                             <a href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank">Share on Google+</a><br />
+                                             <a href="https://plus.google.com/share?url=http://star-trek-ipsum.meetpollux.com/" target="_blank">share on google+</a><br />
                                               
                                               
-                                              <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank">Share on LinkedIn</a>
+                                              <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://star-trek-ipsum.meetpollux.com/" target="_blank">share on linkedIn</a>
                        
 
                         
