--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -40,12 +40,12 @@
 
                             <div class="c-1-1 radiobuttons">
 
-                              <div class="c-2-1">
+                              <div class="c-2-1 radiogroup">
                                 <input class="radiobutton" name="radio1" type="radio" id="radio1" checked>
                                 <label for="radio1">paragraphs</label>
                               </div>
 
-                              <div class="c-2-1">
+                              <div class="c-2-1 radiogroup">
                                 <input class="radiobutton" name="radio1" type="radio" id="radio2"> 
                                 <label for="radio2">lists</label>
                               </div>
