--- a/_dev/css/style.css
+++ b/_dev/css/style.css
@@ -613,7 +613,7 @@ body {
   font-family: Tahoma, Arial, Sans-Serif;
   background: #000000;
   /* Old browsers */
-  background: url(../img/starfield.jpg) center top no-repeat black fixed;
+  background: url(../img/starfield.jpg) center top no-repeat #000 fixed;
 }
 
 .clearfix:after {
@@ -658,7 +658,7 @@ header h1, footer h1 {
   /* IE10+ */
   background: radial-gradient(#fce667 0%, #ff7802 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fce667', endColorstr='#ff7802',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fce667', endColorstr='#ff7802',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
 }
 header h1:before, header h1:after, footer h1:before, footer h1:after {
@@ -690,19 +690,19 @@ header h2, footer h2 {
   border-radius: 10px;
   background: #F11124;
   /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover, #f11124 0%, #8f000f 100%);
+  background: -moz-radial-gradient(center, ellipse cover, #F11124 0%, #8F000F 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #f11124), color-stop(100%, #8f000f));
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #F11124), color-stop(100%, #8F000F));
   /* Chrome,Safari4+ */
-  background: -webkit-radial-gradient(center, ellipse cover, #f11124 0%, #8f000f 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, #F11124 0%, #8F000F 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-radial-gradient(center, ellipse cover, #f11124 0%, #8f000f 100%);
+  background: -o-radial-gradient(center, ellipse cover, #F11124 0%, #8F000F 100%);
   /* Opera 12+ */
-  background: -ms-radial-gradient(center, ellipse cover, #f11124 0%, #8f000f 100%);
+  background: -ms-radial-gradient(center, ellipse cover, #F11124 0%, #8F000F 100%);
   /* IE10+ */
-  background: radial-gradient(#f11124 0%, #8f000f 100%);
+  background: radial-gradient(#F11124 0%, #8F000F 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F11124', endColorstr='#8F000F',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#F11124', endColorstr='#8F000F',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
 }
 header h2:before, header h2:after, footer h2:before, footer h2:after {
@@ -767,7 +767,7 @@ textarea {
 
 p {
   margin: 0.5em 0;
-  color: #e5d1b8;
+  color: #E5D1B8;
 }
 
 .c-3-1 {
@@ -781,19 +781,19 @@ p {
   margin-bottom: 5px;
   background: #507CFF;
   /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover, #9ec5ff 0%, #507cff 100%);
+  background: -moz-radial-gradient(center, ellipse cover, #9EC5FF 0%, #507CFF 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #9ec5ff), color-stop(100%, #507cff));
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #9EC5FF), color-stop(100%, #507CFF));
   /* Chrome,Safari4+ */
-  background: -webkit-radial-gradient(center, ellipse cover, #9ec5ff 0%, #507cff 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, #9EC5FF 0%, #507CFF 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-radial-gradient(center, ellipse cover, #9ec5ff 0%, #507cff 100%);
+  background: -o-radial-gradient(center, ellipse cover, #9EC5FF 0%, #507CFF 100%);
   /* Opera 12+ */
-  background: -ms-radial-gradient(center, ellipse cover, #9ec5ff 0%, #507cff 100%);
+  background: -ms-radial-gradient(center, ellipse cover, #9EC5FF 0%, #507CFF 100%);
   /* IE10+ */
-  background: radial-gradient(#9ec5ff 0%, #507cff 100%);
+  background: radial-gradient(#9EC5FF 0%, #507CFF 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9EC5FF', endColorstr='#507CFF',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9EC5FF', endColorstr='#507CFF',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
 }
 .c-3-1 .options-bottom {
@@ -816,7 +816,7 @@ p {
   /* IE10+ */
   background: radial-gradient(#fcf8f7 0%, #fecdbe 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcf8f7', endColorstr='#fecdbe',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcf8f7', endColorstr='#fecdbe',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
   margin-bottom: 5px;
   padding-top: 1%;
@@ -824,25 +824,31 @@ p {
   font-size: 0.8em;
   min-height: 25px;
 }
+@media only screen and (max-width: 768px) {
+  .c-3-1 .c-1-1 {
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+}
 .c-3-1 .c-1-1.options {
   padding: 0 0 0 5px;
   display: block;
   margin-bottom: 5px;
   background: #507CFF;
   /* Old browsers */
-  background: -moz-radial-gradient(center, ellipse cover, #9ec5ff 0%, #507cff 100%);
+  background: -moz-radial-gradient(center, ellipse cover, #9EC5FF 0%, #507CFF 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #9ec5ff), color-stop(100%, #507cff));
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #9EC5FF), color-stop(100%, #507CFF));
   /* Chrome,Safari4+ */
-  background: -webkit-radial-gradient(center, ellipse cover, #9ec5ff 0%, #507cff 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, #9EC5FF 0%, #507CFF 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-radial-gradient(center, ellipse cover, #9ec5ff 0%, #507cff 100%);
+  background: -o-radial-gradient(center, ellipse cover, #9EC5FF 0%, #507CFF 100%);
   /* Opera 12+ */
-  background: -ms-radial-gradient(center, ellipse cover, #9ec5ff 0%, #507cff 100%);
+  background: -ms-radial-gradient(center, ellipse cover, #9EC5FF 0%, #507CFF 100%);
   /* IE10+ */
-  background: radial-gradient(#9ec5ff 0%, #507cff 100%);
+  background: radial-gradient(#9EC5FF 0%, #507CFF 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9EC5FF', endColorstr='#507CFF',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9EC5FF', endColorstr='#507CFF',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
   font-size: 1em;
   min-height: 28px;
@@ -862,6 +868,16 @@ p {
   background: transparent;
   margin: 6px 4px 0 0;
 }
+@media only screen and (max-width: 768px) {
+  .c-3-1 .c-1-1 .radiobutton {
+    margin-top: 4px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .c-3-1 .c-1-1 .radiogroup {
+    margin: 8px 0 8px;
+  }
+}
 .c-3-1 input[type=button] {
   background: #fce667;
   /* Old browsers */
@@ -877,7 +893,7 @@ p {
   /* IE10+ */
   background: radial-gradient(#fce667 0%, #ff7802 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fce667', endColorstr='#ff7802',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fce667', endColorstr='#ff7802',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */
   text-align: right;
   padding: 10px 25px 0 0;
@@ -902,19 +918,19 @@ p {
 .c-3-2 .content-top {
   background: #517DFF;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: -moz-linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #517dff), color-stop(100%, #6690ff));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #517DFF), color-stop(100%, #6690FF));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: -webkit-linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: -o-linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: -ms-linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* IE10+ */
-  background: linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#517DFF', endColorstr='#6690FF',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#517DFF', endColorstr='#6690FF',GradientType=0 );
   /* IE6-9 */
   height: 20px;
   margin-bottom: 5px;
@@ -928,19 +944,19 @@ p {
   width: 20px;
   background: #517DFF;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: -moz-linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #517dff), color-stop(100%, #6690ff));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #517DFF), color-stop(100%, #6690FF));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: -webkit-linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: -o-linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: -ms-linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* IE10+ */
-  background: linear-gradient(top, #517dff 0%, #6690ff 100%);
+  background: linear-gradient(top, #517DFF 0%, #6690FF 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#517DFF', endColorstr='#6690FF',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#517DFF', endColorstr='#6690FF',GradientType=0 );
   /* IE6-9 */
   border-right: 5px solid #000;
   border-radius: 0 50% 50% 0;
@@ -993,3 +1009,5 @@ p {
     margin: 0 10px;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
