just a bit of optimization

--- a/_dev/css/style.scss
+++ b/_dev/css/style.scss
@@ -97,7 +97,7 @@ $st-light-pink-bg: #fecdbe;
 body {
     font-family: Tahoma, Arial, Sans-Serif;
     background: #000000; /* Old browsers */
-    background: url(../img/starfield.jpg) center top no-repeat #000 fixed;
+    background: url(../img/starfield.jpg) center top no-repeat #000 scroll;
 }
 
 
