adding new canonical

--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="icon" type="image/gif" href="img/treklogo.png"/>
         <meta name="google-site-verification" content="jUFLYo2gPlXSirA0b5_9eXYc6sh3Ku__zHi84zauaeU" />
+        <link rel="canonical" http://vlad-saling.github.io/star-trek-ipsum/</link>
     </head>
     <body>
 
