adding hreflang for webmaster tools

--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -15,6 +15,7 @@
         <link rel="icon" type="image/gif" href="img/treklogo.png"/>
         <meta name="google-site-verification" content="XxHX_8PJILjr5ED0rxjuz_vB6-kX-aPwpjFLowYjmdQ" />
         <link rel="canonical" url="http://vlad-saling.github.io/star-trek-ipsum/" />
+        <link rel="alternate" href="http://vlad-saling.github.io/star-trek-ipsum/" hreflang="x-default" />
     </head>
     <body>
 
