--- a/_dev/css/style.css
+++ b/_dev/css/style.css
@@ -611,9 +611,10 @@ table {
 /* === actual style =============================================== */
 body {
   font-family: Tahoma, Arial, Sans-Serif;
+  font-size: 18px;
   background: #000000;
   /* Old browsers */
-  background: url(../img/starfield.jpg) center top no-repeat #000 fixed;
+  background: url(../img/starfield.jpg) center top no-repeat #000 scroll;
 }
 
 .clearfix:after {
@@ -963,6 +964,34 @@ p {
   margin-right: -30px;
 }
 
+.sharelink {
+  background: #517DFF;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #517DFF 0%, #6690FF 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #517DFF), color-stop(100%, #6690FF));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #517DFF 0%, #6690FF 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #517DFF 0%, #6690FF 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #517DFF 0%, #6690FF 100%);
+  /* IE10+ */
+  background: linear-gradient(top, #517DFF 0%, #6690FF 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#517DFF', endColorstr='#6690FF',GradientType=0 );
+  /* IE6-9 */
+  color: #000;
+  text-decoration: none;
+  padding: 3px 9px;
+  border-radius: 14px;
+  margin-bottom: 8px;
+  display: inline-block;
+}
+.sharelink:hover {
+  color: #ddd;
+}
+
 /* === responsive stuff === */
 @media only screen and (max-width: 880px) {
   header h1, header h2, footer h1, footer h2 {
@@ -984,11 +1013,6 @@ p {
 
   .c-3-1 input[type=button] {
     border-radius: 0px;
-  }
-
-  .sharelink {
-    margin-bottom: 8px;
-    display: inline-block;
   }
 
   p {
