--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -166,19 +166,7 @@ made by <a class="sharelink" href="https://twitter.com/vladsaling">vlad saling</
         <!-- /build -->
 
 <!-- build:remove:dev -->
-       <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-3088394-7']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+       <script type="text/javascript">var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-3088394-7']);_gaq.push(['_trackPageview']);(function(){var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
 
 <!-- /build -->
 
