--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -166,7 +166,16 @@ made by <a class="sharelink" href="https://twitter.com/vladsaling">vlad saling</
         <!-- /build -->
 
 <!-- build:remove:dev -->
-       <script type="text/javascript">var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-3088394-7']);_gaq.push(['_trackPageview']);(function(){var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();</script>
+       <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-3088394-7', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 <!-- /build -->
 
