--- a/_dev/index.html.tmpl
+++ b/_dev/index.html.tmpl
@@ -95,7 +95,7 @@
 
 
 
-                            <input type="button" value="make it so" id="gen" />
+                            <input class="gen" id="gen" type="button" value="make it so" />
                         </div>
 
                         <div class="c-3-2">
